# DriveSim

./: .gitignore  README.md  requirements.sh  requirements.txt  ros-jazzy-desktop-full-install.sh
autocar_description/: package.xml
autocar_gazebo/: CMakeLists.txt  package.xml
autocar_gazebo/models/autocar/: model.sdf
autocar_gazebo/worlds/: autocar.world
autocar_map/: CMakeLists.txt
autocar_map/include/: gridmap.h
autocar_map/src/: bof.cpp
launches/: package.xml
launches/launch/: click_launch.py  default_launch.py
src/autocar_common/: CMakeLists.txt  package.xml
src/autocar_common/config/: frames.yaml  vehicle_params.yaml
src/autocar_description/: package.xml
src/autocar_description/rviz/: view.rviz
src/autocar_description/urdf/: autocar.xacro
src/autocar_gazebo/: CMakeLists.txt  package.xml
src/autocar_gazebo/models/autocar/: model.config  model.sdf
src/autocar_gazebo/worlds/: autocar_road.world  empty.world
src/autocar_localization/: CMakeLists.txt  package.xml
src/autocar_localization/config/: ekf.yaml
src/autocar_localization/launch/: ekf.launch.py
src/autocar_map/: package.xml
src/autocar_map/src/: bof.cpp
src/autocar_msgs/: CMakeLists.txt  package.xml
src/autocar_msgs/msg/: BehaviorState.msg  DetectedObject.msg  TrajectoryPoint.msg
src/autocar_nav/: CMakeLists.txt  package.xml
src/autocar_nav/autocar_nav/: cubic_spline_interpolator.py
src/autocar_nav/config/: navigation_params.yaml
src/autocar_nav/nodes/: globalplanner.py  localisation.py  localplanner.py  tracker.py
src/autocar_perception/: CMakeLists.txt  package.xml
src/autocar_perception/autocar_perception/: __init__.py
src/autocar_perception/nodes/: camera_preprocessor.py  lidar_obstacle_detector.py
src/autocar_planning/: CMakeLists.txt  package.xml
src/autocar_planning/autocar_planning/: __init__.py  collision_checker.py  frenet_planner.py  reference_path.py  trajectory_sampler.py  velocity_profile.py
src/autocar_planning/nodes/: frenet_planner.py
src/autocar_safety/: CMakeLists.txt  package.xml
src/autocar_safety/autocar_safety/: __init__.py
src/autocar_safety/nodes/: safety_gate.py
src/launches/launch/: click_launch.py  default_launch.py
